--- a/src/components/reel.module.css
+++ b/src/components/reel.module.css
@@ -1,6 +1,17 @@
 .reelContainer {
   display: flex;
   overflow-x: auto;
+
+}
+
+.reelContainer::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.reelContainer {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .drinkImgContainer {
