--- a/src/components/box.module.css
+++ b/src/components/box.module.css
@@ -1,13 +1,29 @@
-
-
-.box {
-  border: 1px solid black;
-}
-
-.imgContainer {
+.drinkImgContainer {
   width: 80%;
 }
 
-.imgContainer img {
-  width: 150px;
+.drinkImg {
+  width: 8.2rem;
+  border-radius: 10px 10px 0 0;
+
+}
+
+.drink {
+  border: 1px solid white;
+  border-radius: 10px;
+  transition: 1s;
+  margin: 15px;
+  text-align: center;
+  background-color: rgb(60, 58, 58);
+}
+
+.drink h5 {
+  padding: 0 5px;
+  text-transform: capitalize;
+}
+
+.drink:hover {
+  cursor: pointer;
+  opacity: 0.5;
+  padding: 5px;
 }
