fixed: edge cases - no results

--- a/src/pages/searchPage.module.css
+++ b/src/pages/searchPage.module.css
@@ -2,3 +2,15 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.searchPageContainer {
+  padding-left: 4%;
+}
+
+.searchPageContainer h1 {
+  text-align: center;
+}
+
+.errorSearchPageContainer {
+  text-align: center;
+}
