--- a/src/components/topbar.module.css
+++ b/src/components/topbar.module.css
@@ -5,18 +5,68 @@
   background-color: #282727;
 }
 
+.wrapper {
+  position: relative;
+}
+
+.icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 4px;
+  position: absolute;
+  box-sizing: border-box;
+  top: 13%;
+  left: 3px;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
+
 .inputField {
-  padding: 3px 8px;
+  width: 15rem;
+  padding: 6px 12px;
   outline: none;
   border-radius: 5px;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+
+  padding-left: 2rem;
+  box-sizing: border-box;
 }
 
 .formContainer {
   display: flex;
 }
 
-
+::placeholder {
+  font-family: 'Combo', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+}
 
 .topbarContainer h1 {
   cursor: pointer;
+  animation: flicker 2s infinite alternate;
+  color: #fff;
+}
+
+@keyframes flicker {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px #0fa,
+      0 0 80px #0fa,
+      0 0 90px #0fa,
+      0 0 100px #0fa,
+      0 0 150px #0fa;
+  
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
 }
