--- a/src/components/topbar.module.css
+++ b/src/components/topbar.module.css
@@ -23,6 +23,16 @@
   cursor: pointer;
 }
 
+.formContainer button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .inputField {
   width: 15rem;
   padding: 6px 12px;
